--- a/views/admin/index.ejs
+++ b/views/admin/index.ejs
@@ -55,13 +55,15 @@
       <h1 class="centrar">Dashboard Principal</h1>
       <p class="centrar">Resumen del estado actual del parqueadero.</p>
       <hr class="linea-windows">
- <a href="/admin/vista_parqueaderos" class="btn btn-outline-primary">
-  Vista Parqueaderos <i class="fa-solid fa-building-shield"></i>
-</a>
 
- <a href="/admin/operar" class="btn btn-outline-primary">
- Operar <i class="fa-solid fa-map"></i>
-</a>
+ <span><a href="/admin/vista_parqueaderos" class="btn btn-outline-primary">
+Vista Parqueaderos <i class="fa-solid fa-map"></i>
+</a></span>
+
+<span>
+ <button class="btn-operar "><a href="/admin/operar" >
+ Operar <i class="fa-solid fa-building-shield"></i>
+</a></button></span>
      
       <div id="dashboard-content" class="dashboard-grid">
         
