--- a/views/admin/css/estilo.css
+++ b/views/admin/css/estilo.css
@@ -1,4 +1,4 @@
-/* Dropdown de selección de columnas y filtro de vehículos (migrado desde vehiculos.html) */
+
 .filtros-vehiculos {
   display: flex;
   gap: 16px;
@@ -1073,13 +1073,13 @@ button:hover {
   color: white;
 }
 
-.btn-operar {
-  background-color: #ff3300;
-  color: #000;
+.btn-operar a {
+ 
+  color: #ffffff !important;
 }
 
-.btn-operar:hover {
-  background-color: #c52a04;
+.btn-operar a:hover {
+  
 
 }
 
